# HarborCLS

./: .gitignore  .gitmodules  CMakeLists.txt  Client.cpp  Client.hpp  Configuracion_Switch.txt  Makefile  README.md  Socket.cpp  Socket.hpp  build.sh  cmake_install.cmake  log.txt  log_logging_on_2023-12-15.txt  main.cpp  makefile
Client/: Client.cpp  Client.hpp  (+2 more)
HarborCLS_Library/: CMakeLists.txt  HarborCLS.hpp
HarborCLS_Library/Common/: Error.hpp  PathManager.hpp  common.hpp
HarborCLS_Library/Common/DependenciesManagement/: ApplicationStartupTaskSet.hpp  DependencyManager.hpp  LimitedScopeInstanceTracing.hpp  LimitedScopeRegistration.hpp  Task.hpp
HarborCLS_Library/JsonReader/: IJsonHandler.hpp  IPolicyOperation.hpp  JsonHandler.hpp  NlohmannJsonPolicy.hpp  ParsingPolicy.hpp  PolicyOperation.hpp
HarborCLS_Library/Logger/: ILogger.hpp  Logger.cpp  Logger.hpp  LoggerConfiguration.hpp
HarborCLS_Library/Logger/LogFileRotationPolicies/: BaseFileRotation.hpp  BoundedFileRotation.hpp  NoLogFileRotation.hpp  NoLogRatation.hpp
HarborCLS_Library/Logger/LoggerBuilder/: BasicLoggerBuilder.cpp  BasicLoggerBuilder.hpp  ILoggerBuilder.hpp
HarborCLS_Library/Logger/LoggerFactory/: ILoggerFactory.hpp  LoggerFactory.hpp
HarborCLS_Library/Logger/LoggingBufferingPolicies/: ILoggerBufferingPolicy.hpp  NoBufferingPolicy.hpp
HarborCLS_Library/Logger/LoggingFileManagementPolicies/: FileAlwaysOpenPolicy.cpp  FileAlwaysOpenPolicy.hpp  FileOpenOnDemandPolicy.cpp  ILoggerFileManagementPolicy.hpp
HarborCLS_Library/Server/: GenericServer.hpp  ProtocolHeader.hpp  ServerConfiguration.hpp
HarborCLS_Library/Server/BaseElements/: Handler.hpp  Listener.hpp
HarborCLS_Library/Server/Concurrency/: Queue.hpp  Thread.hpp
HarborCLS_Library/Server/Http/: HttpProtocol.hpp  HttpServer.hpp
HarborCLS_Library/Server/Http/HttpBehavior/: HttpBehavior.hpp  ServerBehavior.hpp
HarborCLS_Library/Server/Http/HttpMessages/: HttpContentTypes.hpp  HttpHeader.hpp  HttpMappings.hpp  HttpResponseStatusCodes.hpp
HarborCLS_Library/Server/Http/HttpMessages/Reponse/: HttpResponse.hpp
HarborCLS_Library/Server/Http/HttpRequestParser/: HttpHeaderParser.cpp  HttpRequestParser.cpp  HttpRequestParser.hpp
HarborCLS_Library/Server/Http/ResponseHeaderComposer/: HttpResponseHeaderComposer.hpp  IResponseHeaderComposer.hpp
HarborCLS_Library/Server/Http/ResponseSerialization/: HttpResponseBodySerializer.hpp  HttpResponseComposer.hpp  HttpResponseHeaderComposer.hpp
HarborCLS_Library/Server/Http/WebApplication/: HttpWebApplication.hpp
HarborCLS_Library/Server/JsonParsingPolicies/: ServerConfigurationParsingPolicy.hpp
HarborCLS_Library/Server/Middleware/: Handler.hpp  Listener.hpp  MiddlewareMessage.hpp
HarborCLS_Library/Server/Middleware/Handlers/: ResponseMiddlewareHandler.cpp  ResponseMiddlewareHandler.hpp
HarborCLS_Library/Server/Protocols/: HttpProtocol.hpp  IRequestParser.hpp  IResponseBodySerializer.hpp  IResponseComposer.hpp  IResponseHeaderComposer.hpp  ProtocolConcept.hpp
HarborCLS_Library/Server/Socket/: Socket.hpp  SocketError.hpp  TcpSocket.cpp  TcpSocket.hpp  UdpSocket.cpp  UdpSocket.hpp
HarborCLS_Library/Server/Socket/SSL/: SSLController.cpp  SSLController.hpp
HarborCLS_Library/Server/WebApplication/: GenericWebApplication.hpp  WebApplication.hpp
HarborCLS_Library/Server/WebApplication/DependencyManagement/: ApplicationStartupTaskSet.hpp  BaseWebAppService.hpp  Builder.hpp  BuilderReferenceWrapper.hpp  ContainerBundle.hpp  ILivingTask.hpp  ITask.hpp  IWebServiceResolver.hpp  LivingTask.hpp  Task.hpp  WebServiceResolver.hpp
HarborCLS_Library/Server/WebApplication/WebAppDefaultServices/: Configuration.hpp  DefaultResourcesProviderService.hpp  FaviconHandlingService.hpp  IConfiguration.hpp  StaticImageProviderService.cpp  StaticImageProviderService.hpp  WebPageDispatchService.hpp
HarborCLS_Tests/: CMakeLists.txt  TestsMain.cpp
HarborCLS_Tests/Logger/: BoundedFileRotationTest.cpp  FileAlwaysOpenPolicyTest.cpp  FileOpenOnDemandPolicyTest.cpp  LoggerBuilderTests.cpp  LoggerNoBufferingPolicyTests.cpp  LoggerTests.cpp  NoLogFileRotationTest.cpp
HarborCLS_Tests/Looger/: LoggerTests.cpp
HarborCLS_Tests/Server/: HttpRequestParsingTests.cpp  HttpResponseComposerTests.cpp
Servers/IntermediaryServer/: CMakeLists.txt  Configuration.json  IntermediaryServer.hpp  Listeners.hpp  cert.pem  main.cpp  makefile  package.json
Servers/IntermediaryServer/Middleware/: LegoPresentHandler.hpp
Servers/IntermediaryServer/Pages/: LegoFigurePage.hpp  LegoFigurePage.html  MainPage.hpp  MainPage.html  layout.html
Servers/IntermediaryServer/Resources/: MainPage.js  common.css
Servers/IntermediaryServer/Services/: FiguresService.hpp  ImageRequestForwardingService.cpp  ImageRequestForwardingService.hpp  LegoDiscoverService.hpp  LegoServerDiscoveryService.cpp  LegoServerDiscoveryService.hpp  RoutingMapService.cpp  RoutingMapService.hpp  RoutingService.cpp  RoutingService.hpp
Servers/IntermediaryServer/Services/Utility/: RoutingMap.cpp  RoutingMap.hpp
Servers/LegoFigureMakerCommon/: CMakeLists.txt  LFMRequest.hpp  LFMRequestParser.hpp  LFMResponse.hpp  LFMResponseComposer.hpp  LegoFigureMakerProtocol.hpp  ServerRoutingInfo.hpp
Servers/LegoFigureMakerCommon/Middleware/: BroadcastListener.hpp
Servers/LegoFigureMakerCommon/Protocol/: LFMProtocolHeader.hpp  LFMRequest.hpp  LFMRequestParser.hpp  LFMResponse.hpp  LFMResponseComposer.hpp  LegoFigureMakerProtocol.hpp
Servers/LegoFigureMakerCommon/Services/: StartUpPresenceNotificationService.hpp
Servers/PiecesServer/: CMakeLists.txt  Configuration.json  LegoFigure.hpp  LegoFile.txt  LegoPiece.hpp  Listeners.hpp  PiecesServer.hpp  legoFile.txt  main.cpp
Servers/PiecesServer/Middleware/: LegoDiscoverHandler.hpp
Servers/PiecesServer/Services/: FigureImageRetrievalService.cpp  FigureImageRetrievalService.hpp  FigureRetrievalService.cpp  FigureRetrievalService.hpp  ILegoRepository.hpp  LegoInMemoryRepository.cpp  LegoInMemoryRepository.hpp  LegoPresentService.cpp  LegoPresentService.hpp  LegoServerDiscoveryService.cpp  LegoServerDiscoveryService.hpp
(+337 files in other folders)
